--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,9 +16,6 @@ services:
       - net.ipv4.ip_forward=1
       - net.ipv4.conf.all.rp_filter=0
       - net.ipv4.conf.default.rp_filter=0
-      - net.ipv4.conf.eth0.rp_filter=0
-      - net.ipv4.conf.eth1.rp_filter=0
-      - net.ipv4.conf.wg0.rp_filter=0
     cap_add:
       - NET_ADMIN
     networks:
@@ -125,11 +122,21 @@ networks:
     ipam:
       config:
         - subnet: 172.22.0.0/24
+    driver_opts:
+      com.docker.network.endpoint.sysctls: >
+        {"net.ipv4.conf.eth0.rp_filter":"0",
+         "net.ipv4.conf.eth1.rp_filter":"0",
+         "net.ipv4.conf.wg0.rp_filter":"0"}
 
   vpn-net:
     ipam:
       config:
         - subnet: 10.8.0.0/24
+    driver_opts:
+      com.docker.network.endpoint.sysctls: >
+        {"net.ipv4.conf.eth0.rp_filter":"0",
+         "net.ipv4.conf.eth1.rp_filter":"0",
+         "net.ipv4.conf.wg0.rp_filter":"0"}
 
   nextcloud-net:
     driver: bridge
